Fix horizontal spacing between apps

--- a/src/components/app-check/AppCheck.css
+++ b/src/components/app-check/AppCheck.css
@@ -9,7 +9,7 @@
   flex: 20%;
   max-width: 105px;
   height: auto;
-  margin: 0 10px 30px;
+  margin: 0 12px 30px;
   padding: 10px;
   text-align: center;
 }
